<resources>

    <!-- Lab 1 -->
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\’m a button</string>

    <!-- Lab 2 -->
    <string name="titleText">Look at my GUI</string>
    <string name="button2Text">Click here</string>
    <string name="checkboxText">Check this out!</string>
    <string name="switchText">Switch on / off</string>
    <string name="editText">Type here</string>

    <string name="toast_message">Here is more information</string>
    <string name="checkbox_text">The checkbox is </string>
    <string name="switch_text">The switch is </string>
    <string name="undo_message">Undo</string>
    <string name="on_message">On</string>
    <string name="off_message">Off</string>

    <!-- Lab 3 -->
    <string name="emailLabel">Enter your email address:</string>
    <string name="emailText">Type email here</string>
    <string name="passwordLabel">Enter your password:</string>
    <string name="passwordText"></string>
    <string name="loginButton">Login</string>

    <string name="profileText">Your profile</string>
    <string name="nameLabel">Your name:</string>
    <string name="nameText">Enter your name</string>
    <string name="emailLabel2">Your email:</string>
    <string name="emailText2">Enter your email</string>
    <string name="pictureLabel">Your picture:</string>
    <string name="hintLabel">Click the button to take a picture</string>

    <!-- Lab 4 -->
    <string name="chatButton">Go to Chat</string>
    <string name="sendButtonText">Send</string>
    <string name="receiveButtonText">Receive</string>
    <string name="messageHint">Type here</string>

    <string name="alert_title">Do you want to delete this?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_description_1">The selected row is </string>
    <string name="alert_description_2">and the database id </string>

    <!-- Lab 6-->
    <string name="profile_weatherButton">Weather Forecast</string>

    <string name="currentTemperature">Current Temperature:</string>
    <string name="minTemperature">Minimum Temperature:</string>
    <string name="maxTemperature">Maximum Temperature:</string>
    <string name="weather_uv">UV Level:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

</resources>
