<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailLabel" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailText"
        android:nextFocusDown="@id/passwordText" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordLabel" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordText"
        android:nextFocusDown="@id/loginButton"
        android:nextFocusUp="@id/emailText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:nextFocusUp="@id/passwordText" />


</LinearLayout>