<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/text1"
        android:text="@string/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        />


    <Button
        android:id="@+id/button2"
        android:text="@string/button2Text"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"

        />

    <CheckBox
        android:id="@+id/checkBox"
        android:text="@string/checkboxText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/button2"
        android:layout_below="@+id/text1"
        />

    <ImageButton
        android:layout_gravity="fill_horizontal"
        android:id="@+id/imageButton"
        app:srcCompat="@drawable/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="20dp"
        />

    <Switch
        android:id="@+id/switch1"
        android:text="@string/switchText"
        android:layout_gravity="fill_horizontal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/editText"
        android:ems="10"
        android:text="@string/editText"
        android:inputType="textPersonName|textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        />

</RelativeLayout>