<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical">

<!--    <ListView-->
<!--        android:id="@+id/theListView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_weight="10" />-->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/the_list"
        android:layout_weight="10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/sendButton"
            android:layout_width = "wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendButtonText"/>

        <EditText
            android:id="@+id/chatEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/messageHint"/>

        <Button
            android:id="@+id/receivedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiveButtonText">
        </Button>

    </LinearLayout>

</LinearLayout>